
Decoders:
 * Fix GPU decoding on Intel HD 2000/3000 cards on Windows

Mac OS X:
 * Fix subtitle rendering resolution when using OS X's native fullscreen mode
 * Improve fullscreen controller time slider with larger click target
 * Fix listing of the lua interfaces (web, telnet and console)
   in the advanced preferences panel
 * Fix spatializer audio filter panel


Changes between 2.0.4 and 2.0.5:
--------------------------------

Access:
 * Fix DVB-S delivery system detection

Audio Output:
 * Fix playback initial synchronization with PulseAudio
   (however similar bugs in PulseAudio version 2.0 and later still exist)
 * Fix file output bug affecting floating point on big endian systems

Demuxers:
 * Fix crash with some embedded subtitle fonts
 * Fix buffer overflow in HTML subtitles parser
 * Fix koreus lua parser
 * Improve reliability for RTSP streams sent by some IP cameras
 * Fix division by 0 in AIFF demuxer
 * Fix some MKV crashes when ordered editions have empty or broken links
 * Fix SWF potential crash on malformed files.

Video filters:
 * Fix crash in Freetype with embedded fonts
 * Fix wrong aspect ratio in some cases

Encoders:
 * Fix Mpeg-2 audio and video encoders initialization

Mac OS X:
 * Fix Reveal-in-Finder for files with non-Western file names
 * Fix crash with local statistics disabled
 * Fix Time counter UI look
 * Fix system sleep issue on OS X 10.5

Win32:
 * Fix https streaming

libVLC:
 * Fix audio and video track selection:
   The constant track identifier is now always used. Some functions previously
   incorrectly used the (moving) index of the track in the table of tracks.

Translations:
 * Update of Asturian, Bengali (India), Bosnian, Croatian, Czech, Danish,
   Dutch, Estonian, French, Galician, Scottish Gaelic, German, Hebrew,
   Italian, Japanese, Khmer, Malayalam, Polish, Slovak, Simplified Chinese,
   Traditional Chinese, Brazilian Portuguese, Turkish, Thai translations
 * Initial translations for Welsh and Interlingua

